Correct table actions button spacing

--- a/src/assets/scss/flex.scss
+++ b/src/assets/scss/flex.scss
@@ -13,3 +13,7 @@
 .justify-content-center {
     justify-content: center;
 }
+
+.justify-content-right {
+    justify-content: right;
+}
